--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
     <div>
       <h1 id="welcome">Bienvenida <span id="name"></span>!!!</h1>
-      <h2 id="trivia">TRIVIA TEST</h2>
       <p id="ask"> Ingresa tu nombre</p>
 
       <!--Ingresa tu nombre-->
@@ -36,7 +35,7 @@
 
       <!--Pregunta número 1 del reto-->
       <section id="section3">
-        <h3 id="pregunta1">¿Qué prefieres?</h3>
+        <h2>¿Qué prefieres?</h2>
         <form>
           <input type="radio" name="answer1" value="si">Beber agua
           <input type="radio" name="answer1" value="no">Beber gaseosa<br><br>
@@ -48,7 +47,7 @@
 
       <!--Pregunta número 2 del reto-->
       <section id="section4">
-        <h3 id="pregunta2">¿Qué te gusta comer?</h3>
+        <h2>¿Qué te gusta comer?</h2>
         <form>
           <input type="radio" name="answer2" value="si">Ensalada-Pollo a la plancha
           <input type="radio" name="answer2" value="no">Papas fritas-Pizza<br><br>
@@ -60,7 +59,7 @@
 
       <!--Pregunta número 3 del reto-->
       <section id="section5">
-        <h3 id="pregunta3">¿Qué prefieres?</h3>
+        <h2>¿Qué prefieres?</h2>
         <form>
           <input type="radio" name="answer3" value="si">Hacer ejercicios
           <input type="radio" name="answer3" value="no">Ver televisión<br><br>
@@ -72,13 +71,46 @@
 
       <!--Pregunta número 4 del reto-->
       <section id="section6">
-        <h3 id="pregunta4">¿Cuánto tiempo duermes?</h3>
+        <h2>¿Cuánto tiempo duermes?</h2>
         <form>
           <input type="radio" name="answer4" value="si">6-8 horas
           <input type="radio" name="answer4" value="no">3-5 horas<br><br>
         </form>
         <center>
         <button onclick = pregunta4()>Enviar</button>
+        </center>
+      </section>
+
+      <section id="section7">
+        <h2>RESULTADOS</h2>
+        <center>
+          <table>
+            <tr>
+              <td></td>
+              <td>Saludable</td>
+              <td>No saludable</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td id="t1_1">Agua</td>
+              <td id="t1_2">Gaseosa</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td id="t2_1">Ensalada</td>
+              <td id="t2_2">Pizza</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td id="t3_1">Ejercicio</td>
+              <td id="t3_2">TV</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td id="t4_1">6-8</td>
+              <td id="t4_2" >3-5</td>
+            </tr>
+          </table>
         </center>
       </section>
 
